fix: fix button apprearance on IOS

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -59,6 +59,11 @@ h1 {
   width: 100px;
   height: 34px;
   border-radius: 80px;
+  -webkit-appearance: none; // For Safari
+  -moz-appearance: none; // For Firefox
+  appearance: none;
+  -webkit-tap-highlight-color: transparent; // Remove iOs tap highlights
+
   &:hover {
     background-color: $color-yellow-100;
   }
